src/test/deca/syntax/valid/lex/string.deca
// Description:
//    Programme minimaliste lisant un caractere
//
// Resultats:
//      ok
//
// Historique:
//    cree le 01/01/2022


"1234556789"