src/test/deca/syntax/invalid/lex/FauxCaractere.deca
// Description:
//    Programme minimaliste utilisant un faux string
//
// Resultats:
//    token recognition error at: '"FAUX \n'
//
// Historique:
//    cree le 01/01/2022


"FAUX \n STRING "



